--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "galgenjunge/fpdf",
-    "version": "1.8.1",
+    "version": "dev-master",
     "homepage": "http://www.fpdf.org",
     "description": "Unofficial PSR-0 compliant version of the FPDF library",
     "type": "library",
